# search-eval

./: .env.example  .gitignore  pyproject.toml  readme.md  requirements.txt
predsearch/datasets/: questions.json
search/: __main__.py  cli.py  config.py
search/clients/: base.py  exa_client.py  none_client.py  tavily_client.py
search/datasets/: questions.jsonl
search/eval/: prompts.py  runner.py  scorer.py  visualize.py
search/llm/: base.py  openai_llm.py
search/results/: results_20260331_225053.json  results_20260331_232021.json
search/results-full/: results_20260401_010935.json
search/results-run1/: results_20260331_233957.json
