[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "search"
version = "0.1.0"
description = "Prediction Market Search API Benchmark"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
    "exa-py>=1.0.0",
]

[project.scripts]
search = "search.cli:main"
